Fixing up the responsiveness of the header - There was a bit too much whitespace on big screens for my taste...

--- a/src/app/modules/home/components/header/header.component.scss
+++ b/src/app/modules/home/components/header/header.component.scss
@@ -16,12 +16,11 @@ header {
 
   @include tablet {
     padding-bottom: 12rem;
-    padding-top: 12rem;
+    padding-top: 10rem;
   }
 
   @include widescreen {
     padding-bottom: 16em;
-    padding-top: 14rem;
   }
 
   h1 {
